--- a/css/Styles.scss
+++ b/css/Styles.scss
@@ -30,7 +30,7 @@ $carousel-item-height:500px;
 }
 
 .modal-content {
-    color: #000;
+    color: floralwhite;
 	
 	.modal-header {
 	background:$background-dark;
@@ -43,7 +43,7 @@ $carousel-item-height:500px;
 	}
 
 	.modal-body {
-		background:$background-pale;
+		background:$background-light;
 	}
 
 	.modal-footer {
