--- a/css/styles.css
+++ b/css/styles.css
@@ -15,14 +15,14 @@
   color: floralwhite; }
 
 .modal-content {
-  color: #000; }
+  color: floralwhite; }
   .modal-content .modal-header {
     background: #512DA8;
     color: floralwhite; }
     .modal-content .modal-header .close {
       color: floralwhite; }
   .modal-content .modal-body {
-    background: #D1C4E9; }
+    background: #9575CD; }
   .modal-content .modal-footer {
     background: #9575CD; }
     .modal-content .modal-footer .button-spacer {
